apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-kapt'
apply plugin: 'com.google.gms.google-services'
apply plugin: 'com.google.firebase.crashlytics'

repositories {
    mavenCentral()
}

android {
    compileSdkVersion 33
    defaultConfig {
        minSdkVersion 26
        targetSdkVersion 33
        versionCode 91107
        versionName '0.9.11.7'
        applicationId 'net.yupol.transmissionremote.app'
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
        testInstrumentationRunnerArguments clearPackageData: 'true'
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    buildTypes {
        debug {
            manifestPlaceholders = [crashlyticsEnabled:'false']
        }
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            manifestPlaceholders = [crashlyticsEnabled:'true']

            lintOptions {
                disable 'MissingTranslation'
                abortOnError false
            }
        }
    }
    packagingOptions {
        resources {
            excludes += ['META-INF/notice.txt', 'META-INF/license.txt', 'META-INF/LICENSE.txt', 'META-INF/NOTICE.txt']
        }
    }

    dataBinding {
        enabled true
    }

    testOptions {
        execution 'ANDROIDX_TEST_ORCHESTRATOR'
    }

    useLibrary 'org.apache.http.legacy'
    namespace 'net.yupol.transmissionremote.app'
}

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
    implementation "androidx.core:core-ktx:1.9.0"
    implementation 'androidx.annotation:annotation:1.6.0'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.3.0'
    implementation 'com.google.android.material:material:1.8.0'
    implementation 'com.google.guava:guava:27.0.1-android'
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation('com.octo.android.robospice:robospice:1.4.14')
    implementation('com.octo.android.robospice:robospice-google-http-client:1.4.14') {
        exclude (group: 'org.apache.httpcomponents', module: 'httpclient')
    }
    implementation('com.google.http-client:google-http-client-jackson2:1.22.0') {
        exclude (group: 'org.apache.httpcomponents', module: 'httpclient')
    }

    implementation('com.mikepenz:materialdrawer:6.1.2') {
        transitive = true
    }
    implementation 'com.mikepenz:iconics-core:3.1.0@aar'
    implementation "com.mikepenz:iconics-views:3.0.4@aar"
    implementation 'com.mikepenz:google-material-typeface:3.0.1.3.original@aar'
    implementation 'com.mikepenz:fontawesome-typeface:5.3.1.1@aar'
    implementation 'com.mikepenz:community-material-typeface:2.7.94.1@aar'
    implementation 'com.mikepenz:ionicons-typeface:2.0.1.5@aar'

    implementation 'com.github.sevar83:indeterminate-checkbox:1.0.5@aar'

    implementation 'com.github.hotchemi:permissionsdispatcher:2.2.0'
    kapt 'com.github.hotchemi:permissionsdispatcher-processor:2.2.0'

    implementation 'com.getbase:floatingactionbutton:1.10.1'

    implementation 'com.evernote:android-job:1.2.2'

    implementation 'commons-io:commons-io:2.6'

    // Emoji
    implementation 'com.vdurmont:emoji-java:4.0.0'

    // Crashlytics
    implementation platform('com.google.firebase:firebase-bom:31.0.2')
    implementation 'com.google.firebase:firebase-crashlytics'
    implementation 'com.google.firebase:firebase-analytics'


    testImplementation 'junit:junit:4.13.2'
    testImplementation 'com.google.truth:truth:1.1.3'

    androidTestImplementation 'androidx.test:core:1.5.0'
    androidTestImplementation 'androidx.test:core-ktx:1.5.0'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.5'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
    androidTestImplementation 'com.google.truth:truth:1.1.3'
    androidTestImplementation 'org.mockito:mockito-android:2.28.2'
    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
    androidTestUtil 'androidx.test:orchestrator:1.4.2'
}
